2011-08-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/command.c (rlgets): Removing duplicate entries trashes command
	line history when using editline. Just suppress adding the same command
	to history repeatedly.
	* src/history.c (history_find_all): editline's version of
	history_set_pos() does not work, so traverse history list manually.
	History indices are reversed compared to GNU readline. Fixes history ?.
	Patch #3186010

	* term/em.trm (EMF_put_text): Use iconv (if available) to convert
	UTF-8 encoding to UTF-16 and store using wide characters.
	Bug #3021779

2011-08-22  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c:  Honor 'set key maxrows N' in 3D plot key.
	Bug #3396501

2011-08-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/commands.c src/misc.c docs/gnuplot.doc:
	The old-style if/else syntax cannot be mixed with the new syntax using
	{ and } to enclose blocks of commands, possibly spanning several lines.
	Add stronger warnings to the documentation and issue an error message
	if an old-style if statement is encountered inside a bracketed clause.
	Bug #3393631

2011-08-15  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (WndGraphProc): Restore text window on space key:
	also show terminal window if it is currently minimized.

	* src/command.c (pause_command) src/win/wgnuplib.h (GW) src/win/wgraph.c
	src/win/winmain.h src/win/winmain.c term/win.trm: Support multiple
	graph windows. All state variables of graph windows were contained
	in a single struct already. Replace all references to this struct
	(graphwin) by pointers and dynamically allocate new instances when
	required. Do not pass on mouse and key events from inactive windows.
	Note: Since a single number passed to `set term win` is now interpreted
	as window identifier, the old and fontsize options are no longer
	supported and the `font` keyword is now required. This is consistent
	with other terminals (e.g. x11 and wxt).
